Cultibox (1.1.29) precise; urgency=low
    + Correction des accents sur Mac et concernant la partie Notes

-- Yann Genevois <yann.genevois@gmail.com>  Fri Aug  2 10:30:41 CEST 2013


Cultibox (1.1.28) precise; urgency=low
    + Ajout de la section "Le saviez-vous?" dans la page de welcome
    + Différenciation des messages de chargement des logs en mode auto ou lors de la soumission du formulaire
    + Remise en fonction de la notification de logs plus anciens présent à être chargé
    + Une fenêtre permet de selectionner une date de début et de fin pour la suppréssion des logs de la base ou encore de supprimer tous les logs existant
    + Réorganisation des fichiers de la carte SD
    + Ajout du fichier index dans le repertoire logs
    + Mise en place de la fonctionnalité de remise à zéro du min/max des capteurs
    + Compatibilité descendante des cartes SD
    + Ajout de la tolérance sur la régulation secondaire dans le fichier plugXX
    + Ajout du chargement des logs pour le capteur de température d'eau
    + Les catégories du menu s'affichent maintenant directement après modification de la configuration
    + Les erreurs dans le menu de configuraion et d'affichage des logs sont gérées en AJAX sans rechargement de page
    + Debug de la gestion et création des programmes
    + Désactivation de la limite de nombre d'état de 250 dans le fichier plugv, sera remise en fonction dans la 1.1.29

-- Yann Genevois <yann.genevois@gmail.com> Tue Jul 16 10:42:56 CEST 2013


Cultibox (1.1.27) precise; urgency=low
    + Correction de l'affichage du message de configuration des puissances: le message indique quelle prise il faut configurer et renvoie sur l'onglet 'Prises' adequat
    + Correction de l'affichage du message de détection de la carte SD dans les programmes qui s'affichait deux fois
    + Correction de la création des programmes, le nombre de prises configurée dans l'onglet 'Configuration' agit maintenant sur le fichier plugv (ce n'était pas le cas avant)